feat: fixing warning [DHIS2-14884]